# findmatches-cli

./: Cargo.toml
src/: main.rs  multi_account.rs  rate_limit.rs
src/cli/: app.rs
src/commands/: auth.rs  matches.rs  profile.rs  search.rs
src/models/: match.rs  profile.rs  user.rs
src/utils/: auth.rs  config.rs  dns.rs  request.rs
