[package]
name = "findmatches-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
